--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -4,12 +4,14 @@
 <sprk-stack [hidden]="showPreloader" splitAt="tiny">
   <div
     sprkStackItem
+    style="padding-right:16px"
     class="sprk-o-Stack__item--three-fifths@xs">
     <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
     <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
   </div>
   <div
     sprkStackItem
+    style="padding-left:16px"
     class="sprk-o-Stack__item--two-fifths@xs">
     <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
     <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
