--- a/src/app/modules/homepage/homepage-item/homepage-item.component.html
+++ b/src/app/modules/homepage/homepage-item/homepage-item.component.html
@@ -1,6 +1,15 @@
-<p *ngIf="!isLoading">
-  homepage-item works!
-</p>
-<p *ngIf="isLoading">
-  skeleton screen
-</p>
+<sprk-card
+  cardType="base"
+  idString="card-1"
+  additionalClasses="sprk-c-Card--full sprk-u-mbl">
+    <div *ngIf="isLoading" class="sprk-o-Stack__item sprk-c-Card__content sprk-o-Stack sprk-o-Stack--medium">
+      <h3 class="sprk-b-TypeDisplayFour">
+        Skeleton Screen
+      </h3>
+    </div>
+    <div *ngIf="!isLoading" class="sprk-o-Stack__item sprk-c-Card__content sprk-o-Stack sprk-o-Stack--medium">
+      <h3 class="sprk-b-TypeDisplayFour">
+        Homepage Item
+      </h3>
+    </div>
+</sprk-card>
