--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 .preloader {
     width: 40px;
     height: 40px;
-    background-color: #ffa022;
+    background-color: $sprk-blue-tint-50;
   
     margin: 40px auto;
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
