Add sample skeleton screens

--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -13,6 +13,7 @@
         sprkStackItem
         style="padding-right:16px"
         class="sprk-o-Stack__item--three-fifths@xs">
+        <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
         <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
         <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
       </div>
@@ -20,6 +21,7 @@
         sprkStackItem
         style="padding-left:16px"
         class="sprk-o-Stack__item--two-fifths@xs">
+        <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
         <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
         <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
       </div>
