--- a/src/app/modules/homepage/homepage-item/homepage-item.component.html
+++ b/src/app/modules/homepage/homepage-item/homepage-item.component.html
@@ -2,14 +2,16 @@
   cardType="base"
   idString="card-1"
   additionalClasses="sprk-c-Card--full sprk-u-mbl">
-    <div *ngIf="isLoading" class="sprk-o-Stack__item sprk-c-Card__content sprk-o-Stack sprk-o-Stack--medium">
-      <h3 class="sprk-b-TypeDisplayFour">
-        Skeleton Screen
-      </h3>
-    </div>
-    <div *ngIf="!isLoading" class="sprk-o-Stack__item sprk-c-Card__content sprk-o-Stack sprk-o-Stack--medium">
-      <h3 class="sprk-b-TypeDisplayFour">
-        Homepage Item
-      </h3>
+    <div class="sprk-o-Stack__item sprk-c-Card__content sprk-o-Stack sprk-o-Stack--medium">
+      <div class="sprk-u-mbm sprk-u-mlm">
+          <div *ngIf="isLoading" class="skeleton-screen-header"></div>
+          <h3 *ngIf="!isLoading" class="sprk-b-TypeDisplayFour">
+            Homepage Item
+          </h3>
+      </div>
+      <div *ngIf="isLoading" class="skeleton-screen-body"></div>
+      <div *ngIf="!isLoading" class="sprk-o-Box--large main-content">
+        Main Content
+      </div>
     </div>
 </sprk-card>
