Initial commit to move towards inheritance

--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -14,16 +14,16 @@
         style="padding-right:16px"
         class="sprk-o-Stack__item--three-fifths@xs">
         <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
-        <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
-        <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
+        <app-homepage-item-one (completedEvent)="onCompletion($event)"></app-homepage-item-one>
+        <app-homepage-item-two (completedEvent)="onCompletion($event)"></app-homepage-item-two>
       </div>
       <div
         sprkStackItem
         style="padding-left:16px"
         class="sprk-o-Stack__item--two-fifths@xs">
         <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
-        <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
-        <app-homepage-item (completedEvent)="onCompletion($event)"></app-homepage-item>
+        <app-homepage-item-three (completedEvent)="onCompletion($event)"></app-homepage-item-three>
+        <app-homepage-item-four (completedEvent)="onCompletion($event)"></app-homepage-item-four>
       </div>
     </sprk-stack>
   </div>
