--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div [hidden]="!showPreloader">
-  <div class="preloader"></div>
+  <div class="preloader sprk-c-Spinner sprk-c-Spinner--circle sprk-c-Spinner--large sprk-c-Spinner--dark"></div>
 </div>
 <sprk-stack [hidden]="showPreloader">
   <div sprkStackItem>
