--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -13,17 +13,29 @@
         sprkStackItem
         style="padding-right:16px"
         class="sprk-o-Stack__item--three-fifths@xs">
-        <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
-        <app-homepage-item-one (completedEvent)="onCompletion($event)"></app-homepage-item-one>
-        <app-homepage-item-two (completedEvent)="onCompletion($event)"></app-homepage-item-two>
+        <app-homepage-item-one
+          [title]="'Homepage Item One'"
+          [position]="{ columnNumber: 1, rowNumber: 1 }"
+          [isMainHomepageItem]="true"
+          (completedEvent)="onCompletion($event)"></app-homepage-item-one>
+        <app-homepage-item-two
+          [title]="'Homepage Item Two'"
+          [position]="{ columnNumber: 1, rowNumber: 2 }"
+          (completedEvent)="onCompletion($event)"></app-homepage-item-two>
       </div>
       <div
         sprkStackItem
         style="padding-left:16px"
         class="sprk-o-Stack__item--two-fifths@xs">
-        <!-- first item here will always have content. whether it is an error page or some ads that might take it's place -->
-        <app-homepage-item-three (completedEvent)="onCompletion($event)"></app-homepage-item-three>
-        <app-homepage-item-four (completedEvent)="onCompletion($event)"></app-homepage-item-four>
+        <app-homepage-item-three
+          [title]="'Homepage Item Three'"
+          [position]="{ columnNumber: 2, rowNumber: 1 }"
+          [isMainHomepageItem]="true"
+          (completedEvent)="onCompletion($event)"></app-homepage-item-three>
+        <app-homepage-item-four
+          [title]="'Homepage Item Four'"
+          [position]="{ columnNumber: 2, rowNumber: 2 }"
+          (completedEvent)="onCompletion($event)"></app-homepage-item-four>
       </div>
     </sprk-stack>
   </div>
